2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* UID.cs:
	* NSData.cs:
	* NSDate.cs:
	* NSArray.cs:
	* NSNumber.cs:
	* NSString.cs:
	* NSObject.cs:
	* NSDictionary.cs:
	* plist-cil.csproj:
	* PropertyListParser.cs:
	* BinaryPropertyListWriter.cs:
	  Implement BinaryPropertyListWriter.

	* NSSet.cs:
	* BinaryPropertyListParser.cs:
	  Implement BinaryPropertyListWriter.
	Add way to make ordered NSSet.

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* NSDate.cs:
	* NSNumber.cs:
	* plist-cil.csproj:
	* PropertyListParser.cs:
	* BinaryPropertyListParser.cs:
	  Implement BinaryPropertyListParser.

2015-02-19  Natalia Portillo  <claunia@claunia.com>

	* UID.cs:
	* NSSet.cs:
	* NSDate.cs:
	* NSData.cs:
	* NSArray.cs:
	* NSNumber.cs:
	* NSObject.cs:
	* NSString.cs:
	* NSDictionary.cs:
	* plist-cil.csproj:
	* PropertyListParser.cs:
	* ASCIIPropertyListParser.cs:
	  Implement ASCIIPropertyListParser

2015-02-18  Natalia Portillo  <claunia@claunia.com>

	* plist-cil.csproj:
	* PropertyListParser.cs:
	  Implement PropertyListParser

2015-02-18  Natalia Portillo  <claunia@claunia.com>

	* NSSet.cs:
	* NSArray.cs:
	* NSObject.cs:
	* NSDictionary.cs:
	  Implement NSObject to .NET Object and all methods on all
	  classes that depended on NSObject<->Object

2015-02-18  Natalia Portillo  <claunia@claunia.com>

	* NSObject.cs:
	  Implement .NET to NSObject castings

2015-02-18  Natalia Portillo  <claunia@claunia.com>

	* plist-cil.csproj:
	* PropertyListFormatException.cs:
	  Implement PropertyListFormatException

2015-02-18  Natalia Portillo  <claunia@claunia.com>

	* NSObject.cs:
	* NSDictionary.cs:
	* plist-cil.csproj:
	  Implement NSDictionary

2015-02-18  Natalia Portillo  <claunia@claunia.com>

	* NSData.cs:
	* NSObject.cs:
	* plist-cil.csproj:
	  Implement NSData.

2015-02-18  Natalia Portillo  <claunia@claunia.com>

	* NSArray.cs:
	* NSObject.cs:
	* plist-cil.csproj:
	  Implements NSArray

2015-02-18  Natalia Portillo  <claunia@claunia.com>

	* NSDate.cs: